# cgv_cmake_example_plugin

./: CMakeLists.txt  README.md  my_plugin.cpp  my_plugin.h  run_git.sh  run_install.sh
